<resources>
    <string name="app_name">DComProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_players">Players</string>
    <string name="New_Game">New Game</string>
    <string name="league_view">League View</string>
    <string name="how_to_play">How To Play</string>
    <string name="game_match">Game Match</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Players</string>
    <string name="title_activity_two_players">TwoPlayers</string>
    <string name="a501">501</string>
    <string name="a301">301</string>
    <string name="checkout_mode">Checkout Mode</string>
    <string name="unlimited_mode">Unlimited Mode</string>
    <string name="title_activity_one__player">One_Player</string>
    <string name="title_activity_five">Five</string>
    <string name="one_score">36</string>
    <string name="three_score">170</string>
    <string name="full_score">40</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="checkout">170</string>
    <string name="title_activity_unlimited">Unlimited</string>
    <string name="title_activity_league_view">LeagueView</string>
    <string name="register_team">Register Team</string>
    <string name="view_league_table">View League Table</string>
    <string name="title_activity_league_tables">LeagueTables</string>
    <string name="pleaseSelect">Please select the division below that you would like to view</string>
    <string name="preDivsion">Premier Division</string>
    <string name="division1">Division 1</string>
    <string name="division2">Division 2</string>
    <string name="division3">Division 3</string>
    <string name="title_activity_random_league">RandomLeague</string>
    <string name="title_activity_game_match">GameMatch</string>
    <string name="submit_Button">Submit</string>
    <string name="title_activity_submit__scores">submit_Scores</string>
    <string name="title_activity_reg__team">reg_Team</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="please">Please enter the team name and points</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_update_team">updateTeam</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new">newAc</string>
</resources>
