<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_league_tables"
    tools:context="com.example.rob.dcomproject.LeagueTables">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pleaseSelect"
        android:id="@+id/pleaseSelect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preDivsion"
        android:id="@+id/preDiv"
        android:layout_below="@+id/pleaseSelect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division1"
        android:id="@+id/div1"
        android:layout_below="@+id/preDiv"
        android:layout_alignLeft="@+id/preDiv"
        android:layout_alignStart="@+id/preDiv"
        android:layout_alignRight="@+id/preDiv"
        android:layout_alignEnd="@+id/preDiv" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division2"
        android:id="@+id/div2"
        android:layout_below="@+id/div1"
        android:layout_alignLeft="@+id/div3"
        android:layout_alignStart="@+id/div3"
        android:layout_alignRight="@+id/div3"
        android:layout_alignEnd="@+id/div3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division3"
        android:id="@+id/div3"
        android:layout_below="@+id/div2"
        android:layout_alignLeft="@+id/preDiv"
        android:layout_alignStart="@+id/preDiv"
        android:layout_alignRight="@+id/preDiv"
        android:layout_alignEnd="@+id/preDiv" />
</RelativeLayout>
