<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_two_players"
    tools:context="com.example.rob.dcomproject.TwoPlayers">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a501"
        android:id="@+id/five"
        android:layout_above="@+id/there"
        android:layout_alignLeft="@+id/there"
        android:layout_alignStart="@+id/there"
        android:layout_marginBottom="94dp"
        android:layout_alignRight="@+id/there"
        android:layout_alignEnd="@+id/there" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a301"
        android:id="@+id/there"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/check"
        android:layout_alignStart="@+id/check"
        android:layout_alignRight="@+id/check"
        android:layout_alignEnd="@+id/check" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_mode"
        android:id="@+id/check"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/there"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
